ajout d'export en json

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -60,7 +60,8 @@
         <label>Téléphone</label>
         <input type="tel" data-bind="value: prevenir_telephone" placeholder="numéro de téléphone"/>
         <p>
-            <button id="save" type="submit" class="btn">Enregistrer</button>
+            <button id="save" type="submit" class="btn hidden">Enregistrer</button>
+            <button id="export" type="submit" class="btn">Exporter</button>
         </p>
     </fieldset>
 </div>
