--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
     <title>Formulaire pour la rentrée</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="bthomas@barreverte.fr">
+    <meta name="author" content="bruno@barreverte.fr">
 
     <!-- Le styles -->
     <link href="../css/bootstrap.css" rel="stylesheet">
