--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,7 +16,7 @@
         }
     </style>
     <link href="../css/bootstrap-responsive.css" rel="stylesheet">
-
+    <link href="../css/print.css" rel="stylesheet" />
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     <script src="../js/html5shiv.js"></script>
@@ -72,7 +72,26 @@
 </div>
 
 <div id="viewform" class="container content hidden">
-    visualisation pour impression
+    <div>
+        <p>
+            Nom : <span data-bind="text: nom"></span>
+        </p>
+        <p>
+            Prénom : <span data-bind="text: prenom"></span>
+        </p>
+        <table class="table">
+            <thead><tr>
+                <th>Personnes à prévenir</th>
+                <th>Téléphone</th>
+            </tr></thead>
+            <tbody>
+                <tr>
+                    <td><span data-bind="text: prevenir_nom_prenom"/></td>
+                    <td><span data-bind="text: prevenir_telephone"/></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <div id="about" class="container content hidden">
@@ -85,7 +104,6 @@
 <script src="../js/modernizr.js"></script>
 <script src="../js/knockout-2.2.1.js"></script>
 <script src="../js/formulaire.js"></script>
-
 
 </body>
 </html>
